--- a/week-one/index.html
+++ b/week-one/index.html
@@ -96,6 +96,7 @@
                         <div class="card__extra-info">
                             <div class="card__colors">2 colors</div>
                         </div>
+                        <div class="tooltip just-released">Just Released!</div>
                     </div>
 
                     <div class="card">
@@ -110,6 +111,7 @@
                             <div class="card__colors">2 colors</div>
                             <div class="new-price">$145</div>
                         </div>
+                        <div class="tooltip sale">Sale</div>
                     </div>
 
                     <div class="card">
@@ -123,6 +125,7 @@
                         <div class="card__extra-info">
                             <div class="card__colors">4 colors</div>
                         </div>
+                        <div class="tooltip just-released">Just Released!</div>
                     </div>
 
                     <div class="card">
@@ -150,6 +153,7 @@
                             <div class="card__colors">2 colors</div>
                             <div class="new-price">$165</div>
                         </div>
+                        <div class="tooltip sale">Sale</div>
                     </div>
 
                     <div class="card">
@@ -164,6 +168,7 @@
                             <div class="card__colors">8 colors</div>
                             <div class="new-price">$125</div>
                         </div>
+                        <div class="tooltip sale">Sale</div>
                     </div>
 
                 </div>
