--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -33,7 +33,7 @@
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10.8333 1.66663L2.5 11.6666H10L9.16667 18.3333L17.5 8.33329H10L10.8333 1.66663Z" stroke="#344054" stroke-width="1.67" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                    Upgrade now
+                    <span class="header__link">Upgrade now</span>
                 </a>
                 <div class="header__icons">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -45,6 +45,12 @@
                         <path d="M0 6C0 2.68629 2.68629 0 6 0H34C37.3137 0 40 2.68629 40 6V34C40 37.3137 37.3137 40 34 40H6C2.68629 40 0 37.3137 0 34V6Z" fill="white"/>
                         <path d="M21.4417 27.5C21.2952 27.7525 21.0849 27.9622 20.8319 28.1079C20.5788 28.2536 20.292 28.3303 20 28.3303C19.708 28.3303 19.4212 28.2536 19.1681 28.1079C18.9151 27.9622 18.7048 27.7525 18.5583 27.5M25 16.6666C25 15.3405 24.4732 14.0688 23.5355 13.1311C22.5979 12.1934 21.3261 11.6666 20 11.6666C18.6739 11.6666 17.4021 12.1934 16.4645 13.1311C15.5268 14.0688 15 15.3405 15 16.6666C15 22.5 12.5 24.1666 12.5 24.1666H27.5C27.5 24.1666 25 22.5 25 16.6666Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>  
+                </div>
+                <div class="header__mobile-menu">
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3 12.5H17M3 6.5H21M3 18.5H21" stroke="#667085" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
                 </div>
                 <img src="assets/images/profile-picture.png" alt="Profile picture" class="header__profile-picture">
             </div>
