page header done

--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>HTML/CSS Test</title>
+    <title>Untitled UI</title>
 </head>
 <body>
     <header class="header">
@@ -56,5 +56,33 @@
             </div>
         </div>
     </header>
+    <div class="hero">
+        <div class="hero-container">
+            <section class="page-header">
+                <div class="page-header__text">
+                    <h1 class="page-header__title">Welcome back, Olivia</h1>
+                    <h2 class="page-header__subtitle">Here's your account details and deposits.</h2>
+                </div>
+                <div class="page-header__buttons">
+                    <a href="#" class="button deposit">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_173_22785)">
+                                <path
+                                    d="M10 0.833374V19.1667M14.1667 4.16671H7.91667C7.14312 4.16671 6.40125 4.474 5.85427 5.02098C5.30729 5.56796 5 6.30983 5 7.08337C5 7.85692 5.30729 8.59879 5.85427 9.14577C6.40125 9.69275 7.14312 10 7.91667 10H12.0833C12.8569 10 13.5987 10.3073 14.1457 10.8543C14.6927 11.4013 15 12.1432 15 12.9167C15 13.6903 14.6927 14.4321 14.1457 14.9791C13.5987 15.5261 12.8569 15.8334 12.0833 15.8334H5"
+                                    stroke="#344054" stroke-width="1.67" stroke-linecap="round" stroke-linejoin="round" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_173_22785">
+                                    <rect width="20" height="20" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                        Deposit
+                    </a>
+                    <a href="#" class="button send-funds">Send funds</a>
+                </div>
+            </section>
+        </div>
+    </div>
 </body>
 </html>
