--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -82,6 +82,32 @@
                     <a href="#" class="button send-funds">Send funds</a>
                 </div>
             </section>
+
+            <div class="page-filter">
+                <div class="page-filter__time">
+                    <div class="page-filter__item">12 months</div>
+                    <div class="page-filter__item">30 days</div>
+                    <div class="page-filter__item">7 days</div>
+                    <div class="page-filter__item">24 hours</div>
+                </div>
+                <div class="page-filter__buttons">
+                    <a href="#" class="button dates">
+                        <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M12.3333 1.66669V5.00002M5.66667 1.66669V5.00002M1.5 8.33335H16.5M3.16667 3.33335H14.8333C15.7538 3.33335 16.5 4.07955 16.5 5.00002V16.6667C16.5 17.5872 15.7538 18.3334 14.8333 18.3334H3.16667C2.24619 18.3334 1.5 17.5872 1.5 16.6667V5.00002C1.5 4.07955 2.24619 3.33335 3.16667 3.33335Z"
+                                stroke="#344054" stroke-width="1.67" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Select dates
+                    </a>
+                    <a href="#" class="button filters">
+                        <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4 6H14M1.5 1H16.5M6.5 11H11.5" stroke="#344054" stroke-width="1.67" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                        Filters
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
