--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -108,6 +108,107 @@
                     </a>
                 </div>
             </div>
+
+            <div class="account-info">
+                <div class="account-info__card">
+                    <div class="account-info__chart">
+                        <img src="assets/images/pie-chart-test.png" alt="">
+                    </div>
+                    <div class="account-info__text">
+                        <div class="account-info__first-row">
+                            <div class="account-info__title">Primary account</div>
+                            <div class="account-info__first-icon">
+                                <svg width="4" height="16" viewBox="0 0 4 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M1.99999 8.83331C2.46023 8.83331 2.83332 8.46022 2.83332 7.99998C2.83332 7.53974 2.46023 7.16665 1.99999 7.16665C1.53975 7.16665 1.16666 7.53974 1.16666 7.99998C1.16666 8.46022 1.53975 8.83331 1.99999 8.83331Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 2.99998C2.46023 2.99998 2.83332 2.62688 2.83332 2.16665C2.83332 1.70641 2.46023 1.33331 1.99999 1.33331C1.53975 1.33331 1.16666 1.70641 1.16666 2.16665C1.16666 2.62688 1.53975 2.99998 1.99999 2.99998Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 14.6666C2.46023 14.6666 2.83332 14.2935 2.83332 13.8333C2.83332 13.3731 2.46023 13 1.99999 13C1.53975 13 1.16666 13.3731 1.16666 13.8333C1.16666 14.2935 1.53975 14.6666 1.99999 14.6666Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="account-info__second-row">
+                            <div class="account-info__subtitle">Current balance</div>
+                            <div class="account-info__second-icon">
+                                <svg width="4" height="16" viewBox="0 0 4 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M1.99999 8.83331C2.46023 8.83331 2.83332 8.46022 2.83332 7.99998C2.83332 7.53974 2.46023 7.16665 1.99999 7.16665C1.53975 7.16665 1.16666 7.53974 1.16666 7.99998C1.16666 8.46022 1.53975 8.83331 1.99999 8.83331Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 2.99998C2.46023 2.99998 2.83332 2.62688 2.83332 2.16665C2.83332 1.70641 2.46023 1.33331 1.99999 1.33331C1.53975 1.33331 1.16666 1.70641 1.16666 2.16665C1.16666 2.62688 1.53975 2.99998 1.99999 2.99998Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 14.6666C2.46023 14.6666 2.83332 14.2935 2.83332 13.8333C2.83332 13.3731 2.46023 13 1.99999 13C1.53975 13 1.16666 13.3731 1.16666 13.8333C1.16666 14.2935 1.53975 14.6666 1.99999 14.6666Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="account-info__third-row">
+                            <div class="account-info__balance">$40,206.20</div>
+                            <div class="account-info__growth">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5 8.5V1.5M5 1.5L1.5 5M5 1.5L8.5 5" stroke="#12B76A" stroke-width="1.5" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                                3.4%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="account-info__card">
+                    <div class="account-info__chart">
+                        <img src="assets/images/pie-chart-test.png" alt="">
+                    </div>
+                    <div class="account-info__text">
+                        <div class="account-info__first-row">
+                            <div class="account-info__title">Secondary account</div>
+                            <div class="account-info__first-icon">
+                                <svg width="4" height="16" viewBox="0 0 4 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M1.99999 8.83331C2.46023 8.83331 2.83332 8.46022 2.83332 7.99998C2.83332 7.53974 2.46023 7.16665 1.99999 7.16665C1.53975 7.16665 1.16666 7.53974 1.16666 7.99998C1.16666 8.46022 1.53975 8.83331 1.99999 8.83331Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 2.99998C2.46023 2.99998 2.83332 2.62688 2.83332 2.16665C2.83332 1.70641 2.46023 1.33331 1.99999 1.33331C1.53975 1.33331 1.16666 1.70641 1.16666 2.16665C1.16666 2.62688 1.53975 2.99998 1.99999 2.99998Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 14.6666C2.46023 14.6666 2.83332 14.2935 2.83332 13.8333C2.83332 13.3731 2.46023 13 1.99999 13C1.53975 13 1.16666 13.3731 1.16666 13.8333C1.16666 14.2935 1.53975 14.6666 1.99999 14.6666Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="account-info__second-row">
+                            <div class="account-info__subtitle">Current balance</div>
+                            <div class="account-info__second-icon">
+                                <svg width="4" height="16" viewBox="0 0 4 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M1.99999 8.83331C2.46023 8.83331 2.83332 8.46022 2.83332 7.99998C2.83332 7.53974 2.46023 7.16665 1.99999 7.16665C1.53975 7.16665 1.16666 7.53974 1.16666 7.99998C1.16666 8.46022 1.53975 8.83331 1.99999 8.83331Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 2.99998C2.46023 2.99998 2.83332 2.62688 2.83332 2.16665C2.83332 1.70641 2.46023 1.33331 1.99999 1.33331C1.53975 1.33331 1.16666 1.70641 1.16666 2.16665C1.16666 2.62688 1.53975 2.99998 1.99999 2.99998Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M1.99999 14.6666C2.46023 14.6666 2.83332 14.2935 2.83332 13.8333C2.83332 13.3731 2.46023 13 1.99999 13C1.53975 13 1.16666 13.3731 1.16666 13.8333C1.16666 14.2935 1.53975 14.6666 1.99999 14.6666Z"
+                                        stroke="#98A2B3" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="account-info__third-row">
+                            <div class="account-info__balance">$6,421.10</div>
+                            <div class="account-info__growth">
+                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5 8.5V1.5M5 1.5L1.5 5M5 1.5L8.5 5" stroke="#12B76A" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                2.0%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
