missing pie charts and cards

--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -211,7 +211,7 @@
             </div>
 
             <div class="main-container">
-                <div class="main-container__card">
+                <div class="main-container__card balance-area">
                     <div class="main-container__header">
                         <div class="main-container__title">Balance over time</div>
                         <div class="main-container__logo">
@@ -233,7 +233,7 @@
                     </div>
                 </div>
 
-                <div class="main-container__card">
+                <div class="main-container__card cards-area">
                     <div class="main-container__header">
                         <div class="main-container__title">Your cards</div>
                         <div class="main-container__logo">
@@ -250,9 +250,16 @@
                             </svg>
                         </div>
                     </div>
+                    <div class="main-container__content cards">
+                        <img src="assets/images/left-card.jpg" alt="left-card">
+                        <img src="assets/images/right-card.jpg" alt="right-card">
+                    </div>
+                    <div class="main-container__footer cards">
+                        <a href="#" class="button cards">Manage cards</a>
+                    </div>
                 </div>
 
-                <div class="main-container__card">
+                <div class="main-container__card deposits-area">
                     <div class="main-container__header">
                         <div class="main-container__title">Recent deposits</div>
                         <div class="main-container__logo">
