pie charts added

--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -111,8 +111,8 @@
 
             <div class="account-info">
                 <div class="account-info__card">
-                    <div class="account-info__chart">
-                        <img src="assets/images/pie-chart-test.png" alt="">
+                    <div class="gradient left">
+                        <div class="inner-circle"></div>
                     </div>
                     <div class="account-info__text">
                         <div class="account-info__first-row">
@@ -160,8 +160,8 @@
                     </div>
                 </div>
                 <div class="account-info__card">
-                    <div class="account-info__chart">
-                        <img src="assets/images/pie-chart-test.png" alt="">
+                    <div class="gradient right">
+                        <div class="inner-circle"></div>
                     </div>
                     <div class="account-info__text">
                         <div class="account-info__first-row">
@@ -229,7 +229,76 @@
                         </div>
                     </div>
                     <div class="main-container__content balance">
-                        <img src="assets/images/chart-data-desktop.png" alt="Chart data" class="main-container__image">
+
+                        <div class="desktop-chart">
+                            <svg width="746" height="176" viewBox="0 0 746 176" fill="none" xmlns="http://www.w3.org/2000/svg" class="data-chart">
+                                <g style="mix-blend-mode:multiply" opacity="0.1">
+                                    <path
+                                        d="M17.8612 74.9736L1 77.9167V176H745V42.1667L729.193 47.0547H712.331L704.428 51.6315H693.89C691.079 52.3943 685.248 53.92 684.405 53.92C683.562 53.92 678.082 54.8354 675.448 55.293L652.79 56.6661L639.618 58.4969L618.541 56.6661L607.476 55.293L591.669 58.4969H575.334L561.635 55.293C556.365 54.8354 545.616 53.92 544.773 53.92C543.93 53.92 537.045 53.0046 533.708 52.5469H525.278L505.255 53.92L487.867 55.293L479.963 58.4969L456.252 59.8699L444.133 61.243L430.433 63.5314L417.261 69.0237H411.465L395.657 67.6506L380.377 63.5314L367.204 61.243H359.3L345.601 59.8699L326.105 61.243H307.663L289.221 63.5314L270.779 66.2776L257.079 69.0237L242.326 70.3967L222.303 69.0237L206.496 70.3967L190.688 71.7698L175.935 70.3967L155.912 73.6006L139.051 71.7698L122.19 73.6006H105.856L88.4674 74.9736H70.5524L52.6374 76.3467L35.2493 73.6006L17.8612 74.9736Z"
+                                        fill="url(#paint0_linear_249_27500)" />
+                                </g>
+                                <path
+                                    d="M1 77.9167L17.8612 74.9736L35.2493 73.6006L52.6374 76.3467L70.5524 74.9736H88.4674L105.856 73.6006H122.19L139.051 71.7698L155.912 73.6006L175.935 70.3967L190.688 71.7698L206.496 70.3967L222.303 69.0237L242.326 70.3967L257.079 69.0237L270.779 66.2776L289.221 63.5314L307.663 61.243H326.105L345.601 59.8699L359.3 61.243H367.204L380.377 63.5314L395.657 67.6506L411.465 69.0237H417.261L430.433 63.5314L444.133 61.243L456.252 59.8699L479.963 58.4969L487.867 55.293L505.255 53.92L525.278 52.5469H533.708C537.045 53.0046 543.93 53.92 544.773 53.92C545.616 53.92 556.365 54.8354 561.635 55.293L575.334 58.4969H591.669L607.476 55.293L618.541 56.6661L639.618 58.4969L652.79 56.6661L675.448 55.293C678.082 54.8354 683.562 53.92 684.405 53.92C685.248 53.92 691.079 52.3943 693.889 51.6315H704.428L712.331 47.0547H729.193L745 42.1667"
+                                    stroke="#7F56D9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M1 113.522L17.8612 111.648L35.2493 110.773L52.6374 112.522L70.5524 111.648H88.4674L105.856 110.773H122.19L139.051 109.607L155.912 110.773L175.935 108.732L190.688 109.607L206.496 108.732L222.303 107.858L242.326 108.732L257.079 107.858L270.779 106.108L289.221 104.359L307.663 102.901H326.105L345.601 102.027L359.3 102.901H367.204L380.377 104.359L395.657 106.983L411.465 107.858H417.261L430.433 104.359L444.133 102.901L456.252 102.027L479.963 101.152L487.867 99.1113L505.255 98.2367L525.278 97.3621H533.708C537.045 97.6536 543.93 98.2367 544.773 98.2367C545.616 98.2367 556.365 98.8198 561.635 99.1113L575.334 101.152H591.669L607.476 99.1113L618.541 99.9859L639.618 101.152L652.79 99.9859L675.448 99.1113C678.082 98.8198 683.562 98.2367 684.405 98.2367C685.248 98.2367 691.079 97.2649 693.89 96.779H704.428L712.331 93.8636H729.193L745 90.75"
+                                    stroke="#B692F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <defs>
+                                    <linearGradient id="paint0_linear_249_27500" x1="373" y1="42.1667" x2="373" y2="170.042"
+                                        gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#7F56D9" />
+                                        <stop offset="1" stop-color="#7F56D9" stop-opacity="0" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+                            <div class="month__container">
+                                <div class="month__item">Jan</div>
+                                <div class="month__item">Feb</div>
+                                <div class="month__item">Mar</div>
+                                <div class="month__item">Apr</div>
+                                <div class="month__item">Jun</div>
+                                <div class="month__item">Jul</div>
+                                <div class="month__item">Aug</div>
+                                <div class="month__item">Sep</div>
+                                <div class="month__item">Oct</div>
+                                <div class="month__item">Nov</div>
+                                <div class="month__item">Dec</div>
+                            </div>
+                        </div>
+
+                        <div class="mobile-chart">
+                            <svg width="313" height="174" viewBox="0 0 313 174" fill="none" xmlns="http://www.w3.org/2000/svg" class="data-chart-mobile">
+                                <g style="mix-blend-mode:multiply" opacity="0.1">
+                                    <path
+                                        d="M8.04816 74.1216L1 77.0312V174H312V41.6875L305.392 46.5199H298.344L295.04 51.0448H290.635C289.461 51.7989 287.023 53.3072 286.671 53.3072C286.318 53.3072 284.028 54.2122 282.926 54.6647L273.455 56.0221L267.949 57.8321L259.139 56.0221L254.513 54.6647L247.906 57.8321H241.078L235.351 54.6647C233.149 54.2122 228.656 53.3072 228.303 53.3072C227.951 53.3072 225.073 52.4023 223.678 51.9498H220.154L211.784 53.3072L204.516 54.6647L201.212 57.8321L191.3 59.1896L186.234 60.547L180.508 62.8095L175.001 68.2393H172.579L165.971 66.8818L159.584 62.8095L154.077 60.547H150.773L145.047 59.1896L136.897 60.547H129.188L121.479 62.8095L113.771 65.5244L108.044 68.2393L101.877 69.5968L93.5071 68.2393L86.8994 69.5968L80.2918 70.9542L74.1246 69.5968L65.755 72.7642L58.7068 70.9542L51.6586 72.7642H44.8307L37.5623 74.1216H30.0737L22.585 75.4791L15.3166 72.7642L8.04816 74.1216Z"
+                                        fill="url(#paint0_linear_321_27605)" />
+                                </g>
+                                <path
+                                    d="M1 77.0313L8.04816 74.1216L15.3166 72.7642L22.585 75.4791L30.0737 74.1216H37.5623L44.8307 72.7642H51.6586L58.7068 70.9542L65.755 72.7642L74.1246 69.5968L80.2918 70.9542L86.8994 69.5968L93.5071 68.2393L101.877 69.5968L108.044 68.2393L113.771 65.5244L121.479 62.8095L129.188 60.547H136.897L145.047 59.1896L150.773 60.547H154.077L159.584 62.8095L165.971 66.8818L172.579 68.2393H175.001L180.508 62.8095L186.234 60.547L191.3 59.1896L201.212 57.8321L204.516 54.6647L211.784 53.3072L220.154 51.9498H223.678C225.073 52.4023 227.951 53.3072 228.303 53.3072C228.656 53.3072 233.149 54.2122 235.351 54.6647L241.078 57.8321H247.906L254.513 54.6647L259.139 56.0221L267.949 57.8321L273.455 56.0221L282.926 54.6647C284.028 54.2122 286.318 53.3072 286.671 53.3072C287.023 53.3072 289.461 51.7989 290.635 51.0448H295.04L298.344 46.5199H305.392L312 41.6875"
+                                    stroke="#7F56D9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M1 112.232L8.04816 110.379L15.3166 109.514L22.585 111.244L30.0737 110.379H37.5623L44.8307 109.514H51.6586L58.7068 108.361L65.755 109.514L74.1246 107.497L80.2918 108.361L86.8994 107.497L93.5071 106.632L101.877 107.497L108.044 106.632L113.771 104.903L121.479 103.173L129.188 101.732H136.897L145.047 100.867L150.773 101.732H154.077L159.584 103.173L165.971 105.767L172.579 106.632H175.001L180.508 103.173L186.234 101.732L191.3 100.867L201.212 100.003L204.516 97.985L211.784 97.1204L220.154 96.2557H223.678C225.073 96.5439 227.951 97.1204 228.303 97.1204C228.656 97.1204 233.149 97.6968 235.351 97.985L241.078 100.003H247.906L254.513 97.985L259.139 98.8497L267.949 100.003L273.455 98.8497L282.926 97.985C284.028 97.6968 286.318 97.1204 286.671 97.1204C287.023 97.1204 289.461 96.1596 290.635 95.6792H295.04L298.344 92.7969H305.392L312 89.7188"
+                                    stroke="#B692F6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <defs>
+                                    <linearGradient id="paint0_linear_321_27605" x1="156.5" y1="41.6875" x2="156.5" y2="168.109"
+                                        gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#7F56D9" />
+                                        <stop offset="1" stop-color="#7F56D9" stop-opacity="0" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
+
+                            <div class="month__container-mobile">
+                                <div class="month__item-mobile">Jan</div>
+                                <div class="month__item-mobile">Mar</div>
+                                <div class="month__item-mobile">May</div>
+                                <div class="month__item-mobile">Jul</div>
+                                <div class="month__item-mobile">Sep</div>
+                                <div class="month__item-mobile">Nov</div>
+                                <div class="month__item-mobile">Dec</div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
