modile payment info added

--- a/week-two/html-css-test/index.html
+++ b/week-two/html-css-test/index.html
@@ -462,6 +462,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Visa ending in 1234</div>
+                                    <div class="row__title mobile">Ending in 1234</div>
                                     <div class="row__subtitle">Expiry 06/2024</div>
                                 </div>
                             </div>
@@ -493,6 +494,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Mastercard ending in 5678</div>
+                                    <div class="row__title mobile">Ending in 5678</div>
                                     <div class="row__subtitle">Expiry 06/2024</div>
                                 </div>
                             </div>
@@ -517,6 +519,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Stripe deposit</div>
+                                    <div class="row__title mobile">Stripe deposit</div>
                                     <div class="row__subtitle">billing@untitledui.com</div>
                                 </div>
                             </div>
@@ -541,6 +544,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Visa ending in 1234</div>
+                                    <div class="row__title mobile">Ending in 1234</div>
                                     <div class="row__subtitle">Expiry 06/2024</div>
                                 </div>
                             </div>
@@ -574,6 +578,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">PayPal deposit</div>
+                                    <div class="row__title mobile">PayPal deposit</div>
                                     <div class="row__subtitle">alina@untitledui.com</div>
                                 </div>
                             </div>
@@ -599,6 +604,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Apple Pay</div>
+                                    <div class="row__title mobile">Apple Pay</div>
                                     <div class="row__subtitle">molly@untitledui.com</div>
                                 </div>
                             </div>
@@ -623,6 +629,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Visa ending in 1234</div>
+                                    <div class="row__title mobile">Ending in 1234</div>
                                     <div class="row__subtitle">Expiry 06/2024</div>
                                 </div>
                             </div>
@@ -648,6 +655,7 @@
                                 </div>
                                 <div class="row__text">
                                     <div class="row__title">Stripe deposit</div>
+                                    <div class="row__title mobile">Stripe deposit</div>
                                     <div class="row__subtitle">billing@untitledui.com</div>
                                 </div>
                             </div>
